plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.careup'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
ext {
	springAiVersion = '1.0.0-M6'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/milestone" }
	maven { url "https://repo.spring.io/snapshot" }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	//todo : 토큰 검증 로직 구현 후 활성화 할것
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //aws s3
    implementation 'software.amazon.awssdk:s3:2.17.58'

    //spring mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//redis 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//kafka
	implementation 'org.springframework.kafka:spring-kafka:2.9.0'

	//websocket 의존성
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	//eureka client의존성 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

	//feign 클라이언트
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// Apache Commons & PDF
	implementation 'commons-io:commons-io:2.13.0'
	implementation 'org.apache.pdfbox:pdfbox:2.0.27'

	// Spring AI
	implementation("org.springframework.ai:spring-ai-openai-spring-boot-starter")
	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//json
	implementation 'org.json:json:20240303'

	//qdrant
	implementation 'org.springframework.ai:spring-ai-qdrant-store:1.0.0-M6'




	// Apache POI (엑셀 생성용)
	implementation 'org.apache.poi:poi:5.2.5'
	implementation 'org.apache.poi:poi-ooxml:5.2.5'

	// exp4j (수식 계산용)
	implementation 'net.objecthunter:exp4j:0.4.8'

	//load balancer
	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'

}
dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}